--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -42,6 +42,10 @@
     cursor: pointer;
 }
 
+.nav-logo {
+    height: 40px;
+}
+
 @media screen and (max-width: 768px) {
     .top-nav {
         justify-content: center;
